--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,7 @@
   "manifest_version": 2,
   "name": "__MSG_appName__",
   "permissions": [
+    "notifications",
     "https://api.pixiv.moe/"
   ],
   "default_locale": "en",
