--- a/.eslintrc
+++ b/.eslintrc
@@ -1,28 +1,8 @@
 {
   "extends": [
-    "kotori"
+    "kotori/auto"
   ],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
   "globals": {
     "chrome": true
-  },
-  "plugins": ["react"],
-  "rules": {
-    "react/jsx-uses-react": 1,
-    "react/jsx-boolean-value": 1,
-    "react/no-string-refs": 1,
-    "react/self-closing-comp": 1,
-    "react/jsx-no-bind": [1, {
-        "ignoreRefs": true,
-        "allowArrowFunctions": true
-    }],
-    "react/jsx-uses-vars": 1,
-    "react/prefer-stateless-function": [1, { "ignorePureComponents": true }],
-    "react/sort-comp": 1,
-    "react/jsx-pascal-case": [1, { "allowAllCaps": true }]
   }
 }
