--- a/package.json
+++ b/package.json
@@ -36,15 +36,16 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.1",
-    "archiver": "^2.0.3",
+    "archiver": "^3.1.1",
     "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^0.1.16",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-kotori": "^0.5.4",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.5.6"
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   }
 }
