--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
     "rc-align": "^3.0.0-rc.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -38,13 +40,16 @@
     "@babel/preset-react": "^7.9.1",
     "archiver": "^3.1.1",
     "babel-loader": "^8.1.0",
+    "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-kotori": "^0.5.4",
+    "file-loader": "^6.0.0",
     "style-loader": "^1.1.3",
+    "url-loader": "^4.0.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
