--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.1",
+    "@types/chrome": "^0.0.102",
     "archiver": "^3.1.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
