--- a/source/manifest.json
+++ b/source/manifest.json
@@ -13,7 +13,7 @@
     "default_icon": "logo-48.png"
   },
   "background": {
-    "scripts": ["bg.js"]
+    "scripts": ["backend.js"]
   },
   "manifest_version": 2,
   "name": "__MSG_appName__",
