--- a/package.json
+++ b/package.json
@@ -22,40 +22,35 @@
     "start": "cross-env NODE_ENV=development webpack --watch"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@material-ui/core": "^4.9.7",
-    "@material-ui/icons": "^4.9.1",
-    "jszip": "^3.3.0",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.4.2",
+    "jszip": "^3.9.1",
     "jszip-utils": "^0.1.0",
-    "rc-align": "^3.0.0-rc.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-md-spinner": "^1.0.0",
     "react-progress": "^0.0.12",
     "save-as": "^0.1.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/preset-react": "^7.9.1",
-    "@types/chrome": "^0.0.181",
-    "archiver": "^3.1.1",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-import": "^1.13.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
+    "@types/chrome": "^0.0.183",
+    "archiver": "^5.3.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.4",
     "cross-env": "^7.0.2",
-    "css-loader": "^3.4.2",
+    "css-loader": "^6.7.1",
+    "esbuild-loader": "^2.18.0",
     "eslint": "^6.8.0",
     "eslint-config-kotori": "^0.5.4",
-    "file-loader": "^6.0.0",
-    "style-loader": "^1.1.3",
+    "file-loader": "^6.2.0",
+    "style-loader": "^3.3.1",
     "url-loader": "^4.0.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   }
 }
